// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows small override 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Small"
    accessibilityRole="button"
    accessible={true}
    focusable={false}
    isTVSelectable={true}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#ffffff",
        "borderRadius": 8,
        "flexDirection": "row",
        "justifyContent": "center",
        "opacity": 1,
        "paddingBottom": 25,
        "paddingTop": 24,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2e2e2e",
            "fontSize": 17,
            "lineHeight": 28,
          },
          Object {
            "writingDirection": "ltr",
          },
          Object {
            "color": "#1f2c9b",
            "fontSize": 19,
            "fontWeight": "500",
          },
        ]
      }
    >
      Small
    </Text>
  </View>
</View>
`;

exports[`renders 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Default"
    accessibilityRole="button"
    accessible={true}
    focusable={false}
    isTVSelectable={true}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#ffffff",
        "borderRadius": 8,
        "flexDirection": "row",
        "justifyContent": "center",
        "opacity": 1,
        "paddingBottom": 25,
        "paddingTop": 24,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2e2e2e",
            "fontSize": 17,
            "lineHeight": 28,
          },
          Object {
            "writingDirection": "ltr",
          },
          Object {
            "color": "#1f2c9b",
            "fontSize": 19,
            "fontWeight": "500",
          },
        ]
      }
    >
      Default
    </Text>
  </View>
</View>
`;

exports[`renders an icon and space-between if supplied 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Button"
    accessibilityRole="button"
    accessible={true}
    focusable={false}
    isTVSelectable={true}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#ffffff",
        "borderRadius": 8,
        "flexDirection": "row",
        "justifyContent": "center",
        "opacity": 1,
        "paddingBottom": 25,
        "paddingTop": 24,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2e2e2e",
            "fontSize": 17,
            "lineHeight": 28,
          },
          Object {
            "writingDirection": "ltr",
          },
          Object {
            "color": "#1f2c9b",
            "fontSize": 19,
            "fontWeight": "500",
          },
        ]
      }
    >
      Button
    </Text>
  </View>
</View>
`;

exports[`renders different color for secondary 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Button"
    accessibilityRole="button"
    accessible={true}
    focusable={false}
    isTVSelectable={true}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#ffffff",
        "borderRadius": 8,
        "flexDirection": "row",
        "justifyContent": "center",
        "opacity": 1,
        "paddingBottom": 25,
        "paddingTop": 24,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2e2e2e",
            "fontSize": 17,
            "lineHeight": 28,
          },
          Object {
            "writingDirection": "ltr",
          },
          Object {
            "color": "#1f2c9b",
            "fontSize": 19,
            "fontWeight": "500",
          },
        ]
      }
    >
      Button
    </Text>
  </View>
</View>
`;
